# NBodySim

./: .gitignore  CMakeLists.txt  README.md  body.cpp  body.h  button.cpp  button.h  conf.yml  force.cpp  force.h  main.cpp  simualation.cpp  simulation.h  simulation_window.cpp  simulation_window.h  text_panel.cpp  text_panel.h
src/: body.cpp  body.h  button.cpp  button.h  config_parser.cpp  config_parser.h  graphic_primitives.cpp  graphic_primitives.h  main.cpp  math.cpp  math.h  simulation.cpp  simulation.h  simulation_window.cpp  simulation_window.h  text_panel.cpp  text_panel.h
